<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Home"/>
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_event_available_black_24dp"
        android:title="Events" />
    <item
        android:id="@+id/nav_location"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="Clubs"/>



</menu>